# yolo_vlm_webapp

./: README.md  main.py  pyproject.toml
static/: index.html
