[project]
name = "yolo-vlm-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.4",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.12",
]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
