[project]
name = "yolo-vlm-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.4",
    "numpy<2",
    "opencv-python<4.11",
    "python-multipart>=0.0.22",
    "ultralytics>=8.4.12",
    "uvicorn>=0.40.0",
]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
